--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -68,8 +68,8 @@
                     <td><img src="/static/img/{{ total.subsubtipoingreso__origen__nombre }}.png" class="pull-left" height="40" alt="{{ total.subsubtipoingreso__origen__nombre }}" />
                     </td>
                     <td> <h4>{{ total.subsubtipoingreso__origen__nombre }}</h4> </td>
-                    <td><span class="btn btn-info col-md-87 cifra">{{ total.percent_asignado }}%</span></td>
-                    <td><span class="btn btn-info col-md-87 cifra">{{ total.percent_ejecutado }}%</span></td>
+                    <td><span class="btn btn-info col-md-87 cifra">{{ total.asignado_percent }}%</span></td>
+                    <td><span class="btn btn-info col-md-87 cifra">{{ total.ejecutado_percent }}%</span></td>
                   </tr>
                 {% endfor %}
              </table>
