--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -4,6 +4,7 @@
 {% load core_extras %} 
 {% load mathfilters %} 
 {% block main_content %}
+    <h2 class="titular">Inversión municipal {{ municipio }} {{ year }}</h2>
     <form method="GET">
     <select name="year">
     {% for ayear in year_list %}
@@ -28,48 +29,70 @@
     {% if municipio and charts.4 %}
         {{ charts|load_charts:"tipo, area, fuente, fuente_pie, comparativo_anios, percapita_anios, asignado" }}
     {% else %}
-        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, asignado" }}
+        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, asignado, ultimos, fuentes" }}
     {% endif %}
+
     <!-- tabla4 -->
     <div id="invTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
-
-        <div class="col-md-6">
-            <h3>Ingresos Totales del A&ntilde;o</h3>
-            {% for total in totales %}
-              <div class="row totales">
-                <div class="col-md-8 text-left">
-                    <img src="/static/img/{{ total.catinversion__nombre }}.png" class="pull-left" width="50" alt="{{ total.catinversion__nombre }}" />
-                    <h4>{{ total.catinversion__nombre }}</h4>
+        <!--maribel 21/07 - ingresos resumen -->
+        <div class="row separador">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="inversion monto asignado" />
+                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuestado</h3>
+                    <span class="cifra grande text-primary">{{ asignado|intcomma }}</span>
                 </div>
-                <div class="col-md-2">
-                    <span class="btn btn-info col-md-12 cifra">{{ total.percent }}%</span>
+                <div class="col-md-4">
+                    <img src="{% static 'img/gf.png' %}" class="img-responsive margen pull-left" alt="inversion monto asignado" />
+                    <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ ejecutado|intcomma }}</span>
                 </div>
-                {% if total.clase_percent %}
-                <div class="col-md-2">
-                    <span class="btn btn-info col-md-12 cifra">{{ total.clase_percent }}%</span>
-                </div>
+                {% if municipio %}
+                    <div class="col-md-4">
+                    <img src="{% static 'img/categoria2.png' %}" class="img-responsive margen pull-left" alt="Categoria de municipio" />
+                    <h3>Categor&iacute;a de municipio </h3><span class="cifra text-success grande">{{ mi_clase.clasificacion }}</span>
+                    </div>
                 {% endif %}
-              </div>
-            {% endfor %}
+            </div>
         </div>
-         <!-- tabla2 -->
-        <div class="col-md-6">
+        <!--Fin de resumen-->
+
+        <div class="col-md-5">
+            <!--maribel 21/07- tabla1 inversion municipal -->
+            <h2>Inversión municipal</h2>
+            <h3>Porcentaje por clasificación</h3>
+            <table class="table">
+            <tr class="info"><th colspan="2">Clasificación</th><th>Inicial</th><th>Ejecutado</th></tr>
+            {% for total in totales %}
+              <tr>
+                <td class="text-left"><img src="/static/img/{{ total.catinversion__nombre }}.png" class="pull-left" width="50" alt="{{ total.catinversion__nombre }}" /></td>
+                <td><h4>{{ total.catinversion__nombre }}</h4></td>
+                <td><span class="btn btn-info col-md-12 cifra">{{ total.asignado_percent }}%</span></td>
+                <td><span class="btn btn-info col-md-12 cifra">{{ total.ejecutado_percent }}%</span></td>
+              </tr>
+            {% endfor %}
+            </table>
+         <!-- tabla1 -->
+        </div>
+        <div class="col-md-7">
+            <!--maribel 21/07 tabla2 inverson -->
+            <h3>Inversión municipal</h3>
+            <h4>Millones de córdobas corrientes</h4>
             <table class="table table-bordered">
             <thead>
-                <tr>
-                    <th>Clasificaci&oacute;n de la Inversi&oacute;n</th>
+                <tr class="info">
+                    <th>Clasificaci&oacute;n de la inversi&oacute;n</th>
                     <th>Inicial</th>
                     <th>Ejecutado</th>
-                    <th>%</th>
+                    <th>% Ejecutado</th>
                 </tr>
             </thead>
             <tbody>
             {% for total in cat %}
               <tr>
                 <td class="text-left">{{ total.catinversion__nombre }}</td>
-                <td>{{ total.asignado }}</td>
-                <td>{{ total.ejecutado }}</td>
+                <td>{{ total.asignado|intcomma }}</td>
+                <td>{{ total.ejecutado|intcomma }}</td>
                 <td>
                 {% if total.asignado %}
                     <span class="text-success">{{ total.ejecutado|div:total.asignado|mul:100|floatformat:2 }}%</span>
@@ -77,29 +100,91 @@
                 </td>
               </tr>
               {% endfor %}
+              <tr class="success bold">                                       
+                <td>TOTAL</td>                                              
+                <td>{{ asignado|intcomma }}</td>                            
+                <td>{{ ejecutado|intcomma }}</td>                           
+                <td class="montos">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
+              </tr>
             </tbody>
             </table>
         </div>
+        {% if not municipio %}
+        <!--maribel 21/07 tabla3 inversion - nacional -->
+        <div class="col-md-7">
+            <h3>Inversión municipal por población</h3>
+            <h4>por categoría de municipios en córdobas corrientes</h3>
+            <table class="table table-condensed">
+                <tr class="info"><th>Categoría de municipio</th> <th>Asignado</th> <th>Ejecutado</th></tr>
+                {% for row in porclasep %}
+                <tr>
+                    <td>{{ row.clasificacion }}</td>
+                    <td class="tex-center">{% if row.asignado %}{{ row.asignado|floatformat:2 }}{% else %} 0 {% endif %}</td>
+                    <td>{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }} {% else %} 0 {% endif %}</td>
+                </tr>
+                {% endfor %}
+                <tr class="success">
+                    <td><strong>TOTAL</strong></td>
+                    <td><strong>{{ porclasep|total_sum:'asignado'|floatformat:2 }}</strong></td>
+                    <td><strong>{{ porclasep|total_sum:'ejecutado'|floatformat:2 }}</strong></td>
+                </tr>
+            </table>
+        </div>
+        <!-- /fin inversion tabla3 nacional -->                                                      
+        {% endif %}
+        <!-- maribel 21/07 inversion-tabla3-municipal -->
+        {% if municipio %}
+            <div class="col-md-5">
+                <h3>Ranquin de municipio de misma categoría municipal</h3>
+                <h4 class="text-info">Millones de córdobas corrientes por habitante</h4>
+                <table class="table table-condensed">
+                    <tr class="info"><th>Municipios</th> <th>P. Inicial</th> <th>Ejecución</th></tr>
+                    {% for row in otros %}
+                        {% if municipio.slug == row.inversion__municipio__slug%}
+                        <tr class="info">
+                        {% else %}
+                        <tr>
+                        {% endif %}
+                            <td>{{ row.inversion__municipio__nombre }}</td>
+                            <td>{{ row.asignado_percent }}</td>
+                            <td>{{ row.ejecutado_percent }}</td>
+                        </tr>
+                    {% endfor %}
+                    <tr class="success">
+                        <td>TOTAL</td>
+                        <td>{{ otros|total_sum:'asignado'|floatformat:2 }}</td>
+                        <td>{{ otros|total_sum:'ejecutado'|floatformat:2 }}</td>
+                    </tr>
+                </table>
+            </div>
+        {% endif %}
+        <br clear="all">
+        <div class="col-md-6"><div id='fuentes'>Fuentes will be rendered here.</div></div>
+        <!-- /fin inversion-tabla3-municipal -->
     </div>
     <div role="tabpanel" class="tab-pane fade" id="invmodificacion" aria-labelledby="invmodificacion-tab">
 
-        <div class="col-md-8">
-        <!-- tabla3 -->
+        <div class="col-md-10">
+        <!-- maribel 21/07  inversion tabla4 -->
+            <h3>Modificaciones al presupuesto municipal</h3>
+            <h4>Inversiones en millones de córdobas corrientes</h4>
             <table class="table table-bordered">
             <thead>
-                <tr>
+                <tr class="info">
                     <th>Clasificaci&oacute;n de la Inversi&oacute;n</th>
                     <th>Inicial</th>
                     <th>Actualizado</th>
+                    <th>Modificación</th>
                     <th>Ejecutado</th>
-                    <th>%</th>
+                    <th>%Ejecutado/Actualizado</th>
+                    <th>%Ejecutado/Inicial</th>
                 </tr>
             </thead>
             <tbody>
             {% for total in cat %}
               <tr>
                 <td class="text-left">
-                    <h4>{{ total.catinversion__nombre }}</h4>
+                    {{ total.catinversion__nombre }}
                 </td>
                 <td>
                    {{ total.asignado }}</td>
@@ -108,10 +193,24 @@
                     {{ total.actualizado }}
                 </td>
                 <td>
-                    {{ total.actualizado|sub:total.asignado }}
+                    {% if total.actualizado %}{{ total.actualizado|sub:total.asignado|intcomma }}{% else %}0{% endif %} 
                 </td>
                 <td>
                     {{ total.ejecutado }}
+                </td>
+                <td>
+                    {% if total.actualizado %}                                    
+                      {{ total.ejecutado|div:total.actualizado|mul:100|floatformat:1|intcomma }}%</td>
+                    {% else %}
+                        0
+                    {% endif %}     
+                </td>
+                <td>
+                    {% if total.actualizado %}                                    
+                      {{ total.ejecutado|div:total.asignado|mul:100|floatformat:1|intcomma }}%</td>
+                    {% else %}
+                        0
+                    {% endif %}     
                 </td>
               </td>
             {% endfor %}
@@ -121,7 +220,8 @@
     </div>
     <br clear="all">
     <div role="tabpanel" class="tab-pane fade" id="invhistorico" aria-labelledby="invhistorico-tab">
-
+        <h3>Comportamiento histórico de las inversiones anuales</h3>
+        <h4>En millones de córdobas corrientes</h4>
         <div class="col-md-9">
             <table class="table table-bordered">
             <thead>
@@ -137,7 +237,7 @@
             {% for total in anuales %} 
               <tr>
                 <td class="text-left">
-                    <h4>{{ total.inversion__year }}</h4>
+                    <h4>{{ total.inversion__anio }}</h4>
                 </td>
                 <td>{{ total.asignado }}</td>
                 <td>{{ total.actualizado }}</td>
@@ -185,13 +285,13 @@
           </table>
     </div>
     <div class="clearfix"></div>
-    <div id='tipo'> Chart will be rendered here </div>
-    <div id='area'> Chart will be rendered here </div>
-    <div id='fuente'> Chart will be rendered here </div>
-    <div id='fuente_pie'> Chart will be rendered here </div>
-    <div id='comparativo_anios'> Chart will be rendered here </div>
-    <div id='percapita_anios'> Chart will be rendered here </div>
-    <div id='asignado'> Chart will be rendered here </div>
-    <div id='ejecutado'> Chart will be rendered here </div>
-    <div id='ultimos'> Chart will be rendered here </div>
+    <div id='tipo' style="display:none;"> Chart will be rendered here </div>
+    <div id='area'  style="display:none;"> Chart will be rendered here </div>
+    <div id='fuente' style="display:none;"> Chart will be rendered here </div>
+    <div id='fuente_pie'> Fuentes de financiamiento? </div>
+    <div id='comparativo_anios'> Compartativo anual </div>
+    <div id='percapita_anios'> Inversion percapita  </div>
+    <div id='asignado'> Inversion asignados </div>
+    <div id='ejecutado'>Inversion ejecutada </div>
+    <div id='ultimos'>Ultimos anios </div>
 {% endblock %}
