--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <h2 class="titular">Origen de los ingresos  {{ request.GET.municipio|capfirst }} {{ anio }}</h2>
+    <h2 class="titular">Origen de los ingresos  {{ municipio }} {{ year }}</h2>
     <form method="GET">
     <select name="year">
     {% for ayear in year_list %}
