--- a/core/templates/ago.html
+++ b/core/templates/ago.html
@@ -169,7 +169,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <!-- /fin aci-tabla2 -->                                                      
       <div role="tabpanel" class="tab-pane fade" id="acimodificacion" aria-labelledby="acimodificacion-tab">
         <!-- maribel 30/07 aci-tabla4 -->
-        <h3>Modificaciones al presupuesto - Ingresos corrientes totales</h3>
+        <h3>Modificaciones al presupuesto - Ingresos corrientes propios</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
             <tr class="info"> <th>Rubros del ingreso</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th>% Ejecutado/Actualizado</th></tr>
@@ -258,7 +258,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
       <div role="tabpanel" class="tab-pane fade" id="aciorigen" aria-labelledby="aciorigen-tab">
         <!--maribel 20/07 oim-tabla 7 -->
         <div class="col-md-6">
-            <h3>Ejecución presupuestaria del ingreso corrientes totalesl</h3>
+            <h3>Ejecución presupuestaria del ingreso corrientes propios</h3>
             <h4 class="text-info">Millones de córdobas corrientes</h4>
             <table class="table table-condensed">
                 <tr class="info"><th>Años</th> <th>Inicial</th> <th>Ejecutado</th> <th>% Ejecutado/Inicial</th></tr>
