Especificando version de hightcharts por actualizacion en ultima version

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -134,6 +134,6 @@
     <!-- script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-    <script src="http://code.highcharts.com/highcharts-3d.js"></script>
+    <script src="http://code.highcharts.com/4.1.1/highcharts-3d.js"></script>
   </body>
 </html>
