--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -113,7 +113,7 @@
 {% block main_content %}
         <div class="clear"></div>
         <div class="text-center">
-            <h2 class="titular">Presupuesto Sector Municipal 2015</h2>
+            <h2 class="titular">Presupuesto Consolidado Municipal 2015</h2>
             <hr />
         </div>
         {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area, fuentes" }}
@@ -195,7 +195,11 @@
     <section id="inversiones" class="main">
         <div class="container">
             <div class="row">
-                <div class="text-center"><h2 class="titular" style="margin-bottom:40px;">Inversi&oacute;n Sector Municipal 2015</h2></div>
+                <div class="text-center">
+                    <h2 class="titular" style="margin-bottom:40px;">Presupuesto Inversi&oacute;n Municipal 2015</h2>
+                    <!--FIXME: Una vez se cargue el ejecutado cambiar
+                    Presupuesto por Ejecucion --!>
+                </div>
                 <div class="col-md-2">
                     <div class="clearfix">
                         <div class="pull-right">
