--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,6 +33,13 @@
 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/tooltip.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip({
+            placement : 'top'
+            });
+        });
+    </script>
   </head>
 <!-- NAVBAR
 ================================================== -->
